renamed package to flowfunc

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <div id='root'></div>
-        <script src="/dash_flume/output.js"></script>
+        <script src="/flowfunc/output.js"></script>
     </body>
 </html>
